# rockduck

./: Cargo.toml  README.md  build.rs
benches/: vis_deltavis.rs
docs/: constitution.md
scripts/: generate_benchmark_data.py  test_weight_contract.py  train_tree_cnn.py
src/: codec.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  typed_arrow_records.rs
src/cdc/: debezium.rs  log.rs  mod.rs  sink.rs  stream.rs
src/codec/: adaptive_encoding.rs  column_encoding.rs  corr_detector.rs  lea_features.rs  postcard_adapter.rs  serialize.rs  timestamp.rs
src/compaction/: access_tracker.rs  adaptive.rs  ecotune.rs  io_scheduler.rs  mod.rs  nonblocking.rs  pdt_merge.rs  phase.rs  reencode.rs  scheduler.rs
src/iceberg/: avro_writer.rs  catalog.rs  export.rs  mod.rs  translate.rs  vortex_writer.rs
src/metadata/: block_stats.rs  block_zone_map.rs  granule_id.rs  kv_engine.rs  kv_store.rs  layer.rs  lbf.rs  mace_adapter.rs  mod.rs  pk_index.rs  pk_skiplist.rs  projection.rs  rocksdb.rs  seg_alias.rs  seg_meta.rs  zone_map.rs
src/mvcc/: mod.rs  shadow_columns.rs  visibility.rs
src/query/: duckdb_ext.rs  feedback.rs  filter_expr.rs  mod.rs  multi_index.rs  router.rs  time_travel.rs  time_travel_impl.rs  vector_ops.rs  vtab.rs  vtab_quack.rs
src/query/routing/: config.rs  cost.rs  feedback.rs  ml.rs  mod.rs  plan_encoder.rs  tier1.rs  tier2.rs
src/read/: adaptive_lm.rs  aggregate.rs  late_mat.rs  mod.rs  point_get.rs  row_value.rs  scan.rs  staleness.rs  update_materializer.rs
src/segment/: adaptive_del_mask.rs  del_mask.rs  delta_store.rs  encoding.rs  layout.rs  meta.rs  mod.rs  overlay.rs  projection.rs  sparse_index.rs  upd_mask.rs
src/storage/: fastlanes.rs  file_manager.rs  granule.rs  granule_bloom_filter.rs  granule_zone_map_mmap.rs  mmap_file.rs  mod.rs  parquet_format.rs  vortex.rs  vortex_alp_ext.rs  write_path.rs
src/storage/delta/: disk_store.rs  flush_engine.rs  frozen_store.rs  mem_store.rs  merge.rs  mod.rs  sparsity.rs  types.rs
src/write/: checkpoint.rs  durability_wal.rs  group_commit.rs  heat_tracker.rs  insert.rs  mod.rs  vis_file.rs  wal.rs  wal_recovery.rs  wal_utils.rs
tests/: integration_tests.rs  vtab_tests.rs
